# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
	# "crates/*"
	# "crates/forky_ai",
	"crates/forky_bevy",
	"crates/forky_cli",
	"crates/forky_core",
	# "crates/forky_esp",
	"crates/forky_fs",
	"crates/forky_play",
	"crates/forky_net",
	"crates/forky_web",
]

[workspace.package]
version = "0.2.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Peter Hayman <peteyhayman@gmail.com>"]
description = "Rust Utilities"
documentation = "https://mrchantey.github.io/forky/docs"
repository = "https://github.com/mrchantey/forky"

[workspace.dependencies]
### internal ###
forky = { path = "./", version = "0.2.0-rc.1" }
# forky_ai = { path = "./crates/forky_ai", version = "0.1.43" }
forky_bevy = { path = "./crates/forky_bevy", version = "0.2.0-rc.1" }
forky_cli = { path = "./crates/forky_cli", version = "0.2.0-rc.1" }
forky_core = { path = "./crates/forky_core", version = "0.2.0-rc.1" }
forky_fs = { path = "./crates/forky_fs", version = "0.2.0-rc.1" }
forky_esp = { path = "./crates/forky_esp", version = "0.2.0-rc.1-rc.5" }
forky_play = { path = "./crates/forky_play", version = "0.2.0-rc.1" }
forky_net = { path = "./crates/forky_net", version = "0.2.0-rc.1" }
forky_web = { path = "./crates/forky_web", version = "0.2.0-rc.1" }
forky_web_macros = { path = "./crates/forky_web/macros", version = "0.2.0-rc.1" }

### game ###

sweet = { git = "https://github.com/mrchantey/sweet", features = ["bevy"] }
# sweet = { path = "../sweet", features = ["bevy"] }
# sweet = { version = "0.2", features = ["bevy"] }
bevy = { version = "0.15", default-features = false }
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "0c959f77007c29eead7f902bddd3342a1ecbca20", default-features = false }

# bevy-inspector-egui = "0.23.4"
# bevy_mod_debugdump = "0.10.0"
# bevy_rapier3d = { version = "0.25.0", features = ["debug-render-3d"] }
# wgpu = { version = "0.19.1" }

### utility ###
anyhow = "1"
thiserror = "2"
heck = "0.5"
bytes = "1"

## attributes ###
extend = "1"

### io ###
clap = { version = "4", features = ["string", "derive"] }
colorize = "0.1"
crossterm = "0.28"
gag = "1"
glob = "0.3"
notify = "7"
notify-debouncer-full = "0.4"

### math ###
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

### async ###
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"time",
] }
tokio-stream = "0.1"
rayon = "1"
once_cell = "1"

### macros ###
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

### HTTP ###
http = "1"
http-body = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }

### server ###
axum = "0.8"
axum-extra = "0.10"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-livereload = "0.9"


### wasm ###
js-sys = "0.3"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
cssparser = "0.34"

[package]
name = "forky"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = []
bevy = ["dep:forky_bevy"]
cli = ["dep:forky_cli"]
fs = ["dep:forky_fs"]
net = ["dep:forky_net"]
axum = ["net", "forky_net?/axum"]
reqwest = ["net", "forky_net?/reqwest"]
web = ["dep:forky_web"]

[dependencies]
forky_core.workspace = true
forky_bevy = { workspace = true, optional = true }
forky_cli = { workspace = true, optional = true }
forky_fs = { workspace = true, optional = true }
forky_net = { workspace = true, optional = true }
forky_web = { workspace = true, optional = true }

#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
[workspace.dependencies.web-sys]
version = "0.3"
features = [
	# HTML
	'Headers',
	'Document',
	'Element',
	'Window',
	'ResizeObserver',
	'ResizeObserverBoxOptions',
	'ResizeObserverEntry',
	'ResizeObserverOptions',
	'ResizeObserverSize',
	'DomRect',
	'DomRectReadOnly',
	# Style
	'MediaQueryList',
	# Events
	'MouseEvent',
	'KeyboardEvent',
	# JS
	'Gpu',
	'console',
	'Navigator',
	'Performance',
	'WebGl2RenderingContext',
	# Fetch
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# Elements
	'HtmlAnchorElement',
	'HtmlCanvasElement',
	'HtmlInputElement',
	'HtmlIFrameElement',
	'HtmlHeadElement',
	'HtmlLinkElement',
	'HtmlScriptElement',
	'HtmlButtonElement',
	'HtmlInputElement',
	'HtmlDivElement',
	'HtmlParagraphElement',
	'File',
	'FileList',
	# Url
	'Url',
	'History',
	'Location',
	'UrlSearchParams',
	# Sockets
	'BinaryType',
	'FileReader',
	'ErrorEvent',
	'MessageEvent',
	'ProgressEvent',
	'WebSocket',
]
