[package]
name = "bevy_editor"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[dependencies]
### Internal ###
forky_core = {workspace = true }

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
