[package]
name = "bevy_webxr"
version = "0.0.1"
edition = "2021"
# license-file = "LICENSE"
readme = "README.md"
authors = ["Peter Hayman <peteyhayman@gmail.com>"]
description = "Bevy WebXR Plugin"
documentation = "https://github.com/mrchantey/forky"
repository = "https://github.com/mrchantey/forky"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
# RENDER
# Copied from https://github.com/bevyengine/bevy/blob/main/crates/bevy_asset/Cargo.toml
# bevy_web_asset = {git = "https://github.com/johanhelsing/bevy_web_asset.git", branch="bevy-0.10" }
crossbeam-channel = "0.5.0"
notify = "5.0.0"

# bevy = "0.10.0"
bevy = {path = "../../../../work-ref/bevy"}
wgpu = "0.15.0"
wgpu-types = { version = "0.15.0" }
wgpu-hal = {version = "0.15.1",features = ["gles"]}
glow = "0.12.1"
# WEB
# wasm-bindgen = "0.2.84"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3.26"
js-sys = "0.3"
# web-sys = "0.3"
console_error_panic_hook = "0.1.6"
# MISC
anyhow = "1.0.4"
extend = "1.1.2"
derive_deref = "1.1.1"

[dependencies.web-sys]
# web-sys = "0.3"
version = "0.3.61"
features = [
	# STANDARD
  'console',
  'Document',
  'Element',
  'Headers',
  'Navigator',
  'Window',
	# IO
	# 'Json',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  # 'Url',
	# WEBGL
  'Gpu',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
	'WebGlFramebuffer', 
	## XR
	'DomPointReadOnly',
	'XrWebGlLayer',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrJointPose',
  'XrJointSpace',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  'XrTargetRayMode',
  'XrView',
  # 'XrViewArray',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'XrSystem',
]

# [dev-dependencies]
# forky_play = {path = "../forky/crates/forky_play"}