[package]
name = "bevy_webxr"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["mrchantey"]
keywords = ["game", "engine", "gamedev", "graphics", "bevy", "xr", "webxr"]
categories = ["game-engines", "graphics", "gui", "rendering", "xr", "webxr"]
description = "WebXR renderer for the Bevy Engine."
homepage = "https://github.com/mrchantey/forky/tree/main/crates/bevy_webxr"
documentation = "https://github.com/mrchantey/forky/tree/main/crates/bevy_webxr"
repository = "https://github.com/mrchantey/forky/tree/main/crates/bevy_webxr"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
# RENDER
# Copied from https://github.com/bevyengine/bevy/blob/main/crates/bevy_asset/Cargo.toml
# bevy_web_asset = {git = "https://github.com/johanhelsing/bevy_web_asset.git", branch="bevy-0.10" }
crossbeam-channel = "0.5.0"
notify = "5.0.0"

# bevy = "0.10.0"
# bevy = {version = "0.11.0-dev", path = "../../../../work-ref/bevy"}
bevy = "0.11.0"
wgpu = "0.16.0"
wgpu-types = { version = "0.16.0" }
wgpu-hal = { version = "0.16.0", features = ["gles"] }
glow = "0.12.1"
# WEB
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
futures = "0.3.26"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"
# MISC
anyhow = "1.0.4"
extend = "1.1.2"

[dependencies.web-sys]
version = "0.3.61"
features = [
	# STANDARD
	'console',
	'Document',
	'Element',
	'Headers',
	'Navigator',
	'Window',
	# IO
	# 'Json',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	# 'Url',
	# WEBGL
	'Gpu',
	'HtmlCanvasElement',
	'WebGl2RenderingContext',
	'WebGlFramebuffer',
	## XR
	'DomPointReadOnly',
	'XrWebGlLayer',
	'XrBoundedReferenceSpace',
	'XrEye',
	'XrFrame',
	'XrHandedness',
	'XrInputSource',
	'XrInputSourceArray',
	'XrInputSourceEvent',
	'XrInputSourceEventInit',
	'XrInputSourcesChangeEvent',
	'XrJointPose',
	'XrJointSpace',
	'XrPose',
	'XrReferenceSpace',
	'XrReferenceSpaceEvent',
	'XrReferenceSpaceEventInit',
	'XrReferenceSpaceType',
	'XrRenderState',
	'XrRenderStateInit',
	'XrRigidTransform',
	'XrSession',
	'XrSessionEvent',
	'XrSessionEventInit',
	'XrSessionInit',
	'XrSessionMode',
	'XrSpace',
	'XrTargetRayMode',
	'XrView',
	'XrViewerPose',
	'XrViewport',
	'XrVisibilityState',
	'XrWebGlLayer',
	'XrWebGlLayerInit',
	'XrSystem',
]
