[package]
name = "forky"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
sweet = { workspace = true }

[[example]]
name = "sweet"
path = "test/sweet.rs"
