[package]
name = "forky_ai"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chatgpt_rs = { workspace = true }
dotenv = { workspace = true }
forky_core = { workspace = true }
forky_fs = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }

[[example]]
name = "sweet"
path = "test/sweet.rs"
