[package]
name = "forky_ai"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chatgpt_rs = { workspace = true }
dotenv = { workspace = true }
forky_core = { workspace = true }
forky_fs = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }

[[example]]
name = "sweet_forky_ai"
path = "test/sweet.rs"
