[package]
name = "forky_bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
forky_core.workspace = true
bevy.workspace = true
rand.workspace = true
# bevy = { workspace = true, optional = true }

anyhow.workspace = true
extend.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
forky_web.workspace = true
js-sys.workspace = true
# wasm-bindgen = { workspace = true, optional = true }
# wasm-bindgen-futures = { workspace = true, optional = true }
# web-sys = { workspace = true, optional = true }


[dev-dependencies]
sweet.workspace = true