[package]
name = "forky_cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }

## async
futures = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
async-std = { workspace = true }

## forky
forky_core = { workspace = true }
forky_fs = { workspace = true }
## fs
glob = { workspace = true }
## cli
clap = { workspace = true }
## style
cssparser = { workspace = true }

## serve
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-livereload = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
sweet = { workspace = true }

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
