[package]
name = "forky_cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "forky"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
extend = { workspace = true }

## async
futures = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }

## forky
forky_core = { workspace = true }
forky_fs = { workspace = true }
## fs
glob = { workspace = true }
## cli
clap = { workspace = true }
colorize = { workspace = true }
## style
cssparser = { workspace = true }

## serve
axum = { workspace = true }
axum-server = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-livereload = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }

[[example]]
name = "sweet_forky_cli"
path = "test/sweet.rs"
