[package]
name = "forky_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme = "README.md"
description.workspace = true
repository.workspace = true

[[bin]]
name = "forky"
path = "src/main.rs"

# [dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies] # specify os for rust analyzer
## forky
forky_core.workspace = true
forky_fs.workspace = true
forky_net = { workspace = true, features = ["reqwest"] }

anyhow.workspace = true
extend.workspace = true

## async
futures.workspace = true
rayon.workspace = true
tokio.workspace = true

## fs
glob.workspace = true
## cli
clap.workspace = true
colorize.workspace = true
## style
cssparser.workspace = true

## key
enigo = "0.3"
reqwest.workspace = true

## serve
http.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-livereload.workspace = true

[dev-dependencies]
sweet.workspace = true
