[package]
name = "forky_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
extend.workspace = true
rand.workspace = true

[dev-dependencies]
sweet.workspace = true
