[package]
name = "forky_esp"
version = {workspace=true}
edition = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[dependencies]
forky_core = {workspace = true}

[dev-dependencies]
sweet = {workspace = true}

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
