[package]
name = "forky_esp"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[[bin]]
name = "forky_esp"
path = "src/entry/main.rs"

[[bin]]
name = "hello_world"
path = "src/entry/hello_world.rs"

[[bin]]
name = "hello_led"
path = "src/entry/hello_led.rs"
[[bin]]
name = "hello_led_strip"
path = "src/entry/hello_led_strip.rs"
[[bin]]
name = "device"
path = "src/entry/device.rs"

[dependencies]
esp32c3-hal = "0.2.0"
riscv-rt         = { version = "0.9.0", optional = true }
esp-backtrace     = { version = "0.2.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-hal-common   = { version = "0.2.0",  features = ["esp32c3"] }
smart-leds        = "0.3.0"

[dev-dependencies]
sweet = {workspace = true}

[features]
default           = ["rt","smartled"]
rt                = ["riscv-rt"]
smartled          = ["esp-hal-common/smartled"]