[package]
name = "forky_esp"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[[bin]]
name = "forky_esp"
path = "src/entry/main.rs"

[[bin]]
name = "hello_world"
path = "src/entry/hello_world.rs"

[[bin]]
name = "hello_led"
path = "src/entry/hello_led.rs"
[[bin]]
name = "hello_led_strip"
path = "src/entry/hello_led_strip.rs"
# [[bin]]
# name = "hello_wasm"
# path = "src/entry/hello_wasm.rs"
[[bin]]
name = "device"
path = "src/entry/device.rs"

[dependencies]
# esp32c3-hal = "0.2.0"
# esp-hal-common   = { version = "0.2.0",  features = ["esp32c3"] }
extend = {workspace = true}
# esp32c3-hal = { version = "0.2.0", path="../../../../../Users/petey/work-ref/esp-hal/esp32c3-hal"}
esp32c3-hal = { version = "0.2.0"}
riscv-rt         = { version = "0.9.0", optional = true }
esp-backtrace     = { version = "0.2.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
# problems with installing esp-backtrace on windows
esp-hal-common   = { version = "0.2.0",  features = ["esp32c3"] }
# esp-hal-common   = { version = "0.2.0",  features = ["esp32c3"], path="../../../../../Users/petey/work-ref/esp-hal/esp-hal-common"}
smart-leds        = "0.3.0"
fugit = "0.3.6"


[target.'cfg(windows)'.dev-dependencies]
sweet = {workspace = true}

[features]
default           = ["rt", "smartled"]
rt                = ["riscv-rt"]
smartled          = ["esp-hal-common/smartled"]
