[package]
name = "forky_idf"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

# [features]
# pio = ["esp-idf-sys/pio"]

[[bin]]
name = "hello_world"
path = "./src/entry/hello_world.rs"

[[bin]]
name = "hello_wasm"
path = "./src/entry/hello_wasmi.rs"


[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
wasmi = "0.20.0"

[build-dependencies]
embuild = "0.30"
anyhow = "1"