[package]
name = "forky_idf"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"


[lib]#required

[[bin]]
name = "hello_world"
path = "./src/entry/hello_world.rs"

[[bin]]
name = "hello_wasm"
path = "./src/entry/hello_wasmi.rs"

[[bin]]
name = "hello_wifi"
path = "./src/entry/hello_wifi.rs"


[dependencies]
anyhow = "1"
embedded-svc = "0.22.3"
esp-idf-hal = "0.38.1"
esp-idf-svc = {version = "0.42.5", features = ["experimental", "alloc"]}
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
wasmi = "0.20.0"

[build-dependencies]
embuild = "0.30"
anyhow = "1"
