[package]
name = "forky_net"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true


[features]
server = ["dep:axum", "dep:tower"]

[dependencies]
anyhow.workspace = true
extend.workspace = true
forky_core.workspace = true

http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
bytes.workspace = true
once_cell.workspace = true

axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
sweet.workspace = true
