[package]
name = "forky_net"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true


[features]
reqwest = ["dep:reqwest", "dep:http-body-util", "dep:once_cell"]
axum = ["dep:axum", "dep:tower"]

[dependencies]
anyhow.workspace = true
extend.workspace = true
forky_core.workspace = true

http.workspace = true
http-body.workspace = true
bytes.workspace = true

reqwest = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
sweet.workspace = true
