[package]
name = "forky_play"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[features]
shader_debug = []
shader_debug_internal = []

[dependencies]
### Internal ###
forky_core = {workspace = true }

### Game ###
bevy = {workspace = true}
bevy-inspector-egui = {workspace = true}
# enigo = {path = "../../../../work-ref/enigo", version = "0.0.14"}
bevy_rapier3d = {workspace = true}
bevy_prototype_debug_lines = {workspace = true}
bevy_easings = {workspace = true}
bevy_mod_debugdump = {workspace = true}
wgpu = {workspace = true}

### Utility ###
strum = {workspace = true}
strum_macros = {workspace = true}
extend = {workspace = true}
anyhow = {workspace = true}
petgraph = {workspace = true}
bytemuck = "1.13.1"


[target.'cfg(windows)'.dev-dependencies]
sweet = {workspace = true}
# forky_fs = {workspace = true }

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]


### Optimization https://bevyengine.org/learn/book/getting-started/setup/

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustflags = ["-Zshare-generics=n"]
